Fix Quality flaws
Signed-off-by: Simon Brandhof <simon.brandhof@sonarsource.com>